--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<% flash.each do |type, msg| %>
+  <div>
+    <%= msg %>
+  </div>
+<% end %>
+
+<% if current_user %>
+  <div class="user">
+    <%= current_user.username %>
+    <%= link_to 'Log Out', logout_path %>
+  </div>
+<% else %>
+  <%= link_to 'Sign Up', signup_path %>
+  <%= link_to 'Log In', login_path %>
+<% end %>
