--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,6 +1,13 @@
-<p style="color: green"><%= notice %></p>
+<div class="task-tools">
+  <div class="left">
+    <%= link_to "Back to dashboard", root_path %>
+  </div>
+  <div class="right">
+    <%= button_to "New link", new_link_path, method: :get %>
+  </div>
+</div>
 
-<h1>Links</h1>
+<h2><%= current_user.username %>'s links</h2>
 
 <div id="links">
   <% @links.each do |link| %>
@@ -9,6 +16,11 @@
       <%= link_to "Show this link", link %>
     </p>
   <% end %>
-</div>
 
-<%= link_to "New link", new_link_path %>
+  <% if @links.count == 0 %>
+    <h4>No links?</h4>
+    <p>
+      You'll need to click <span class="mock-button">New link</span> in the toolbar to set up a link that others can use to push wallpapers to your device.
+    </p>
+  <% end %>
+</div>
