--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New link</h1>
-
-<%= render "form", link: @link %>
-
-<br>
-
-<div>
+<div class="task-tools">
   <%= link_to "Back to links", links_path %>
 </div>
+<h2>New link</h2>
+
+<%= render "form", link: @link %>
