Improved link edit view

--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -17,13 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div>
     <%= form.label :terms, style: "display: block" %>
-    <%= form.text_field :terms %>
+    <%= form.text_area :terms, size: '70x5' %>
   </div>
 
   <div>
