Dumb masthead, heheheheheh

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,7 @@
+<div class="masthead">
+  <h3>A drunk dog project</h3>
+</div>
+
 <h2>What is it?</h2>
 <p>
   Walltaker is inspired by the <a href="https://www.wallclaimer.com/">WallClaimer</a> app, which allows you to set the
