--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <body>
 <header>
   <div class="header__inner">
-    <h1>Walltaker</h1>
+    <h1><a href="/">Walltaker</a></h1>
     <div class="user-tools">
       <% if current_user %>
         <span><%= current_user.username %></span>
