Add companion apps + oddpaws

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,9 +14,16 @@
 <p>
   Walltaker requires you to <strong>make an account on the website (here!) first.</strong> Once you have an account, you can generate
   links to send to friends/enemies, which will enqueue new wallpapers for your account. When you want to start seeing
-  these new wallpapers, <strong>then you can download the <a href="">companion android app,</a></strong> which is able to listen to wallpaper changes to any
+  these new wallpapers, <strong>then you can download the companion apps listed below</strong> which is able to listen to wallpaper changes to any
   account. Enter your username, and then go about your day!
 </p>
+
+<h2>Companion Apps</h2>
+<ul>
+  <li>
+    <a href="https://github.com/oddpawsx/walltaker-go-client/releases/tag/v1.0.1">Oddpaw's walltaker-go-client</a> (Windows/Mac/Linux)
+  </li>
+</ul>
 
 <h2 class="page-break">Frequently Asked Question</h2>
 <blockquote>
