--- a/public/base.css
+++ b/public/base.css
@@ -77,7 +77,7 @@ h4 + p {
 }
 
 strong {
-    color: var(--marked);
+    color: var(--accent);
 }
 
 .page-break {
@@ -176,4 +176,24 @@ form.set-post-id input {
     color: #FFF;
     margin: 1.5rem 2rem;
     padding: 0;
+}
+
+strong.online {
+    color: var(--success);
+    display: flex;
+    align-items: center;
+}
+
+strong.online::before {
+    content: '';
+    display: inline-block;
+    width: 1ch;
+    height: 1ch;
+    background: currentColor;
+    border-radius: 100%;
+    margin-right: 0.25rem;
+}
+
+strong.offline {
+    color: var(--text);
 }
