--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,7 +21,7 @@
 <h2>Companion Apps</h2>
 <ul>
   <li>
-    <a href="https://github.com/oddpawsx/walltaker-go-client/releases/tag/v1.0.1">Oddpaw's walltaker-go-client</a> (Windows/Mac/Linux)
+    <a href="https://github.com/oddpawsx/walltaker-go-client/releases/latest">OddpawsX's walltaker-go-client</a> (Windows/Mac/Linux)
   </li>
 </ul>
 
