--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="/base.css"/>
+  <link rel="stylesheet" href="/link.css"/>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
