--- a/public/link.css
+++ b/public/link.css
@@ -14,6 +14,10 @@
     overflow: hidden;
 }
 
+a:hover > .link {
+    border-color: var(--accent);
+}
+
 .link::after {
     content: attr(data-feed-number);
     font-size: 11rem;
