browse page set up! That was fast

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
     <div class="user-tools">
       <% if current_user %>
         <span><%= current_user.username %></span>
+        <%= link_to 'Browse', '/browse' %>
         <strong><%= link_to 'Edit Links', links_path %></strong>
         <%= link_to 'Log Out', logout_path %>
       <% else %>
+        <%= link_to 'Browse', '/browse' %>
         <%= link_to 'Sign Up', signup_path %>
         <%= link_to 'Log In', login_path %>
       <% end %>
