Added secret decorations

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -1,4 +1,4 @@
-<div class="link" id="<%= dom_id link %>" data-feed-number="<%= link.id %>">
+<div class="link" id="<%= dom_id link %>" data-feed-number="<%= link_id_for_decoration link.id %>">
 
     <div class="link--presence">
       <% if link.last_ping %>
