Added export endpoint

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,7 +18,7 @@
   account. Enter your username, and then go about your day!
 </p>
 
-<h2>Companion Apps</h2>
+<h2 id="companion-apps">Companion Apps</h2>
 <ul>
   <li>
     <a href="https://github.com/oddpawsx/walltaker-go-client/releases/latest">OddPawsX's walltaker-go-client</a> (Windows/Mac/Linux)
