--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -19,7 +19,7 @@
     You'll need a client that watches for changes to this link and sets your background for you. You can see a list of available clients on the <%= link_to 'homepage.', root_path %> Once you have a client set up, you can drop this configuration file in the same folder to connect to this link.
   </p>
 
-  <a download href="<%= link_url(@link) %>/walltaker.toml">walltaker.toml</a>
+  <a download href="<%= link_url(@link) %>/walltaker.toml"><ion-icon name="document-outline"></ion-icon> walltaker.toml</a>
 <% end %>
 
 <h2>Change <%= @link.user.username %>'s wallpaper</h2>
