--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign Up</h2>
+<h2><ion-icon name="person"></ion-icon> Sign Up</h2>
 
 <%= form_with model: @user do |f| %>
   <% if @user.errors.any? %>
