--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -4,6 +4,6 @@
   </div>
 </div>
 
-<h2>Editing link</h2>
+<h2><ion-icon name="build"></ion-icon> Editing link</h2>
 
 <%= render "form", link: @link %>
