Accidentally broke file links on link show page

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -33,7 +33,7 @@
 
 <% if @link.post_thumbnail_url %>
   <figure>
-    <a href="<%= @link.post_url %>.toml" target="_blank">
+    <a href="<%= @link.post_url %>" target="_blank">
       <img src="<%= @link.post_thumbnail_url %>"/>
     </a>
     <figcaption>
