--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -11,7 +11,7 @@
 
   <div>
     <%= form.label :expires, style: "display: block" %>
-    <%= form.datetime_field :expires %>
+    <%= form.datetime_field :expires, class: 'flatpickr' %>
   </div>
 
   <div>
