Friendship management DONE

--- a/app/views/links/browse.html.erb
+++ b/app/views/links/browse.html.erb
@@ -16,7 +16,7 @@
   <% if @links.count == 0 %>
     <h4>No one is online!</h4>
     <p>
-      No links are currently being used. Maybe you should use your own? Click Edit Links in the navigation bar to get started.
+      No links are currently being used. Maybe you should use your own? Click <strong>Links</strong> in the navigation bar to get started.
     </p>
   <% end %>
 </div>
