--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,8 @@
           <ion-icon name="sparkles"></ion-icon>
           Browse
         </a>
-        <%= link_to 'My Links', links_path %>
+        <%= link_to 'Links', links_path %>
+        <%= link_to 'Friends', friendships_path %>
         <%= link_to 'Log Out', logout_path %>
       <% else %>
         <a href="<%= url_for :action => :browse, :controller => :links %>">
