--- a/public/base.css
+++ b/public/base.css
@@ -51,7 +51,11 @@ header .user-tools > * + * {
 header h1 {
     display: flex;
     justify-content: flex-start;
-    flex: 1 1 320px;
+    flex: 1 1 auto;
+}
+
+header h1 a {
+    margin-right: 1rem;
 }
 
 header a,
@@ -230,8 +234,22 @@ a.no-underline:visited {
 }
 
 a[download] > ion-icon,
-a.no-underline > ion-icon {
+.no-underline > ion-icon {
     margin-right: 2px;
+}
+
+button.no-underline > ion-icon {
+    transform: translateY(0.1rem);
+}
+
+button.no-underline {
+    margin-left: 0.5rem;
+    padding: 0.4rem 0.7rem;
+}
+
+button.secondary {
+    background: var(--text);
+    color: var(--bg);
 }
 
 a[download]:hover,
@@ -239,10 +257,19 @@ a.no-underline:hover {
     color: var(--text);
 }
 
+.space-between + .space-between {
+    margin-left: 10px;
+}
+
+.inline,
+form.button_to {
+    display: inline;
+}
+
 .friendship {
     display: flex;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.1rem 1.7rem;
 }
 
 .friendship__names {
