--- a/app/views/links/browse.html.erb
+++ b/app/views/links/browse.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<h2>Browse online links</h2>
+<h2><ion-icon name="documents" class="big"></ion-icon> Browse Links</h2>
 
 <div id="links">
   <% @links.each do |link| %>
