--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<h2><%= current_user.username %>'s links</h2>
+<h2><ion-icon name="document" class="big"></ion-icon> Your Links</h2>
 
 <div id="links">
   <% @links.each do |link| %>
