--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -1,16 +1,16 @@
 <div class="link" id="<%= dom_id link %>" data-feed-number="<%= link_id_for_decoration link.id %>">
 
-    <div class="link--presence">
-      <% if link.last_ping %>
-        <% if link.last_ping.after? (Time.now.utc - 1.minute) %>
-          <strong class="online">Online</strong>
-        <% else %>
-          <strong class="offline"><abbr title=">1 minute since last ping">Offline</abbr></strong>
-        <% end %>
+  <div class="link--presence">
+    <% if link.last_ping %>
+      <% if link.last_ping.after? (Time.now.utc - 1.minute) %>
+        <strong class="online">Online</strong>
       <% else %>
-        <strong class="offline"><abbr title="New link with nothing currently connected">New</abbr></strong>
+        <strong class="offline"><abbr title=">1 minute since last ping">Offline</abbr></strong>
       <% end %>
-    </div>
+    <% else %>
+      <strong class="offline"><abbr title="New link with nothing currently connected">New</abbr></strong>
+    <% end %>
+  </div>
 
   <div class="link--expires">
     <strong>Expires:</strong>
@@ -37,5 +37,11 @@
     </blockquote>
   <% end %>
   </div>
+
+  <% if link.friends_only %>
+    <div class="link--friends-only">
+      <abbr title="This link is for friends only"><ion-icon name="document-lock"></ion-icon></abbr>
+    </div>
+  <% end %>
 
 </div>
